--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.edu.chat</groupId>
-    <artifactId>chat</artifactId>
+    <groupId>com.edu.leagua.team</groupId>
+    <artifactId>leagua-team</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <parent>
@@ -60,7 +60,7 @@
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
-                <version>1.0</version>
+                <version>1.3</version>
                 <configuration>
                     <workingDirectory>${angular.project.location}</workingDirectory>
                     <installDirectory>${angular.project.nodeinstallation}</installDirectory>
